# upgraded-giggle

./: Cargo.toml  README.md  log4rs.yml
examples/: info.rs
src/: lib.rs  main.rs  seafile.rs  seafileapi.rs
src/seafile/: seafileapi.rs
